Add Assignment2 and Assignment3 folders with assignments

--- a/Assignment3/Assignment3.ipynb
+++ b/Assignment3/Assignment3.ipynb
@@ -1919,6 +1919,22 @@
     "plt.title(\"Missing Values Heatmap\")\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1acd41ad",
+   "metadata": {},
+   "source": [
+    "### EDA Summary – Titanic Dataset\n",
+    "\n",
+    "- **Rows × Columns**: 891 × 15\n",
+    "- **Missing Values**:\n",
+    "  - `age`, `embarked`, and `deck` have missing values.\n",
+    "- **Key Observations**:\n",
+    "  - Women had a much higher survival rate than men.\n",
+    "  - Most passengers were between 20–40 years old.\n",
+    "  - Some features like `deck` have many missing values and may need to be dropped or imputed.\n"
+   ]
   }
  ],
  "metadata": {
